--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
       </ul>
     </li>
     <li><a href="./contactme.html">News Letter</a></li>
-    <li><a href="#">Contact Steven</a></li>
+    <li><a href="./contactsteven.html">Contact Steven</a></li>
   </ul>
 </nav>
 </div>
