--- a/contactsteven.html
+++ b/contactsteven.html
@@ -5,6 +5,7 @@
   <title>Contact Steven</title>
   </head>
   <body>
+  <center>
   <script language="javascript">var sa_email_id = '76573-030a5';var sa_sent_text = 'Thank you for contacting Steven. We will get back to you as soon as possible .';</script>
 <script language="javascript" src="http://s1.smartaddon.com/sa_htmlform.js"></script>
 <div id="sa_contactdiv">
@@ -17,5 +18,6 @@
 <tr><td><input type="submit" value="Send Message" style="font-weight:bold"></td></tr>
 </table>
 </form></div>  
+</center>
   </body>
 </html>
