--- a/contactsteven.html
+++ b/contactsteven.html
@@ -3,6 +3,7 @@
 <html>
   <head>
   <title>Contact Steven</title>
+  <link rel="stylesheet" type="text/css" href="contactsteven.css">
   </head>
   <body>
   <center>
