--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 </nav>
 </div>
 <div id="alert">
-  <p>Due to server problems, Steven's Store, Contact Steven, and a few Games are currently not working. Our team is currently working on trying to fix the problem.</p>
+  <p>Due to server problems, Steven's Store, and a few Games are currently not working. Our team is currently working on trying to fix the problem.</p>
 </div>
 <div id="copyright">
   <center><h3>©2016 Steven Productions</h3></center>
