--- a/contactsteven.html
+++ b/contactsteven.html
@@ -4,8 +4,11 @@
   <head>
   <title>Contact Steven</title>
   <link rel="stylesheet" type="text/css" href="contactsteven.css">
+  <script src="contactsteven.js"></script>
   </head>
   <body>
+    <canvas id="c"></canvas>
+<div class="info">Click to add gravity point.</div>
   
   <script language="javascript">var sa_email_id = '76573-030a5';var sa_sent_text = 'Thank you for contacting Steven. We will get back to you as soon as possible .';</script>
 <script language="javascript" src="http://s1.smartaddon.com/sa_htmlform.js"></script>
