--- a/contactsteven.html
+++ b/contactsteven.html
@@ -21,6 +21,8 @@
 <tr><td><input type="submit" value="Send Message" style="font-weight:bold"></td></tr>
 </table>
 </form></div>  
-
+<div id="message">
+  <h1>Send me a message! Even if its just to say Hi!</h1>
+</div>
   </body>
 </html>
