--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
 <div id="alert">
   <p>Due to server problems, Steven's Store, and a few Games are currently not working. Our team is currently working on trying to fix the problem.</p>
 </div>
+<a href="http://sholguin.github.io/prosite.html"><p>Steven's Second Website</p></a>
 <div id="copyright">
   <center><h3>©2016 Steven Productions</h3></center>
 </div>
