--- a/prosite.html
+++ b/prosite.html
@@ -2,10 +2,10 @@
 <html>
   <head>
     <title>Steven's Page</title>
-    <link rel="stylesheet" type="text/css" href="other.css">
+    <link rel="stylesheet" type="text/css" href="prosite.css">
     <script src="jquery-2.2.3.min.js"></script>
     <script src="typed.js"></script>
-    <script type="text/javascript" src="index.js"></script>
+    <script type="text/javascript" src="prosite.js"></script>
 </head>
 <body>
   <img id="emoji" src="https://pixabay.com/static/uploads/photo/2013/07/12/16/50/stickman-151357_960_720.png">
