--- a/prosite.html
+++ b/prosite.html
@@ -8,7 +8,7 @@
     <script type="text/javascript" src="prosite.js"></script>
 </head>
 <body>
-  <img id="emoji" src="https://pixabay.com/static/uploads/photo/2013/07/12/16/50/stickman-151357_960_720.png">
+  <center><img id="emoji" src="https://pixabay.com/static/uploads/photo/2013/07/12/16/50/stickman-151357_960_720.png"></center>
   <h1 id="element"></h1>
   <script>
   $(function(){
