--- a/prosite.html
+++ b/prosite.html
@@ -8,8 +8,16 @@
     <script type="text/javascript" src="prosite.js"></script>
 </head>
 <body>
+  <div id="first_section">
   <center><img id="emoji" src="https://pixabay.com/static/uploads/photo/2013/07/12/16/50/stickman-151357_960_720.png"></center>
   <h1 id="element"></h1>
+  </div>
+  <div id="second_section">
+  <p>second section</p>  
+  </div>
+  <div id="third_section">
+  <p>third section</p>  
+  </div>
   <script>
   $(function(){
       $("#element").typed({
