--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
       <ul>
         <li><a href="./gmn.html">Guess My Number</a></li>
         <li><a href="./memory.html">Memory Game</a></li>
-        <li><a href="#">Game</a></li>
-        <li><a href="#">Game</a></li>
+        <li><a href="http://snap.berkeley.edu/snapsource/snap.html#present:Username=stevenholguin&ProjectName=Pong%20Game">Pong</a></li>
+        <li><a href="http://snap.berkeley.edu/snapsource/snap.html#present:Username=stevenholguin&ProjectName=Arcade">Arcade</a></li>
       </ul>
     </li>
     <li><a href="./giveaways.html">Giveaways</a></li>
