--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <ul>
         <li><a href="./gmn.html">Guess My Number</a></li>
         <li><a href="./memory.html">Memory Game</a></li>
-        <li><a href="h./ttt.html">Tic Tac Toe</a></li>
+        <li><a href="./ttt.html">Tic Tac Toe</a></li>
         <li><a href="http://snap.berkeley.edu/snapsource/snap.html#present:Username=stevenholguin&ProjectName=Arcade">Arcade</a></li>
       </ul>
     </li>
