--- a/ttt.html
+++ b/ttt.html
@@ -5,7 +5,7 @@
 		<meta charset=”UTF-8”>
 		<meta name=”content” keywords=””>
 		<link rel="stylesheet" type="text/css" href="ttt.css">
-		<script type="text/javascript" src="<script src="//cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.2/p5.js"></script>
+		<script type="text/javascript" src="cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.2/p5.js"></script>
 	        <script type="text/javascript" src="ttt.js"></script>
 	</head>
 	<body>
