--- a/contactsteven.html
+++ b/contactsteven.html
@@ -8,21 +8,13 @@
   <script src="contactsteven.js"></script>
   </head>
   <body>
-  <div id="gradient" />
-  <script language="javascript">var sa_email_id = '76573-030a5';var sa_sent_text = 'Thank you for contacting Steven. We will get back to you as soon as possible .';</script>
-<script language="javascript" src="http://s1.smartaddon.com/sa_htmlform.js"></script>
-<div id="sa_contactdiv">
-<form name=sa_htmlform style="margin:0px" onsubmit="return sa_contactform()">
-<table>
-<tr><td>Name:<br><input type="text" name="name" /></td></tr>
-<tr><td>E-mail Address: <span style="color:#D70000">*</span><br><input type="text" name="email" required="true" /></td></tr>
-<tr><td>Subject: <span style="color:#D70000">*</span><br><input type="text" name="subject" required="true" /></td></tr>
-<tr><td>Message: <span style="color:#D70000">*</span><br><textarea name="message" cols="42" rows="9" required="true"></textarea></td></tr>
-<tr><td><input type="submit" value="Send Message" style="font-weight:bold"></td></tr>
-</table>
-</form></div>  
-<div id="message">
-  <h1>Send me a message! Even if its just to say Hi!</h1>
+  <video poster="" id="bgvid" playsinline autoplay muted>
+<source src="http://a1.phobos.apple.com/us/r1000/000/Features/atv/AutumnResources/videos/b1-4.mov" type="video/webm">
+</video>
+<div id="polina">
+<h1>Contact Steven</h1>
+<input id='name'>
+    <button id='submit'>Submit</button>
 </div>
   </body>
 </html>
