--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <li><a href="#">Games</a>
       <ul>
         <li><a href="./gmn.html">Guess My Number</a></li>
-        <li><a href="./memory.html">Memory Game</a></li>
+        <li><a href="./memory.html">Hang Man</a></li>
         <li><a href="./ttt.html">Tic Tac Toe</a></li>
         <li><a href="http://snap.berkeley.edu/snapsource/snap.html#present:Username=stevenholguin&ProjectName=Arcade">Arcade</a></li>
       </ul>
