--- a/memory.html
+++ b/memory.html
@@ -1,19 +1,33 @@
-<!DOCTYPE html>
 <html>
- <head>
-   <title>Memory Game</title>
-   <meta charset="UTF-8">
-   <link rel="stylesheet" type="text/css" href="memory.css">
-   <script type="text/javascript" src="http://code.jquery.com/jquery-2.0.0.min.js"></script>
-   <script type="text/javascript" src="memory.js"></script>
- </head>
- <body>
-   <header>
-     <h1>Memory Game</h1>
-   </header>
-   <div id="card_holder">
-     <!-- use Javascript / JQuery to create cards with the class 'card' here-->
-   </div>
-   <p id="clear">Click to Clear</p>
- </body>
+  <head>
+   <title>Hang Man</title>
+  </head>
+  <body>
+    <!-- What user will use for input -->
+    <input placeholder='Name' type='text' id='name'>
+    <input placeholder='Message' type='text' id='message'>
+    <!-- button for sending message to message board -->
+    <button onclick='sendMessage()' id='js'>Post Me!!</button>
+    <!-- Empty div where the messages will show up -->
+    <div id='messageBoard'></div>
+    <!-- Paste your snippet here, will include firebase CDN -->
+    <script src="https://www.gstatic.com/firebasejs/3.2.1/firebase.js"></script>
+<script>
+  // Initialize Firebase
+  var config = {
+    apiKey: "AIzaSyBxA_XtBOrqWwPtzrPSrLIqGvlqtob2658",
+    authDomain: "chatproject-1578c.firebaseapp.com",
+    databaseURL: "https://chatproject-1578c.firebaseio.com",
+    storageBucket: "",
+  };
+  firebase.initializeApp(config);
+</script>
+
+    
+
+    <!-- adding jQuery -->
+    <script src="https://code.jquery.com/jquery-3.1.0.min.js"></script>
+    <!-- script we'll make dynamic changes with. You'll have to create this file -->
+    <script src='main.js'></script>
+  </body>
 </html>
