--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       </ul>
     </li>
     <li><a href="./giveaways.html">Giveaways</a></li>
-    <li><a href="#">Steven's Store</a>
+    <li><a href="./bsw.html">Steven's Store</a>
       <ul>
         <li class="dir"><a href="#">Electronics</a></li>
         <li class="dir"><a href="#">Clothes</a>
