--- a/bsw.html
+++ b/bsw.html
@@ -2,10 +2,10 @@
 <html>
 <head>
     <title>B.S.W Household</title>
-    <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet"
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-    <script type="text/javascript" src="BSW.js"></script>
+    <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="BSW.css">
+    <script type="text/javascript" src="jquery-2.2.3.min.js"></script>
+    <script type="text/javascript" src="BSW.js"></script>
 </head>
 <body id="page-top" class="index">
     <section id="portfolio">
