--- a/bsw.html
+++ b/bsw.html
@@ -3,9 +3,9 @@
 <head>
     <title>B.S.W Household</title>
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="BSW.css">
+    <link rel="stylesheet" type="text/css" href="bsw.css">
     <script type="text/javascript" src="jquery-2.2.3.min.js"></script>
-    <script type="text/javascript" src="BSW.js"></script>
+    <script type="text/javascript" src="bsw.js"></script>
 </head>
 <body id="page-top" class="index">
     <section id="portfolio">
