--- a/bsw.html
+++ b/bsw.html
@@ -21,8 +21,9 @@
                     <h2>Door</h2>
                     <img id="door_img" src="img/portfolio/lock.png" class="img-responsive">
                 </div>
-                <div class="col-sm-4 portfolio-item">
-                    <img src="img/portfolio/cake.png" class="img-responsive">
+                <div id="light1 "class="col-sm-4 portfolio-item">
+                    <h2>Bed Light</h2>
+                    <img id="light1_img" src="img/portfolio/idea(1).png" class="img-responsive">
                 </div>
                 <div class="col-sm-4 portfolio-item">
                     <img src="img/portfolio/circus.png" class="img-responsive">
