--- a/bsw.html
+++ b/bsw.html
@@ -21,7 +21,7 @@
                     <h2>Door</h2>
                     <img id="door_img" src="img/portfolio/lock.png" class="img-responsive">
                 </div>
-                <div id="light1 "class="col-sm-4 portfolio-item">
+                <div id="light1 "class="col-sm-4 portfolio-item" class="img-responsive">
                     <h2>Bed Light</h2>
                     <img id="light1_img" src="img/portfolio/idea(1).png" class="img-responsive">
                 </div>
