--- a/bsw.html
+++ b/bsw.html
@@ -23,7 +23,7 @@
                 </div>
                 <div id="light1 "class="col-sm-4 portfolio-item" class="img-responsive">
                     <h2>Bed Light</h2>
-                    <img id="light1_img" src="img/portfolio/idea(1).png" class="img-responsive">
+                    <img id="light1_img" src="img/portfolio/light_off.png" class="img-responsive">
                 </div>
                 <div class="col-sm-4 portfolio-item">
                     <img src="img/portfolio/circus.png" class="img-responsive">
