--- a/index.html
+++ b/index.html
@@ -19,27 +19,19 @@
     <li><a href="#">Games</a>
       <ul>
         <li><a href="./gmn.html">Guess My Number</a></li>
-        <li><a href="./memory.html">Hang Man</a></li>
+        <li><a href="./SpaceInvaders.html">Space Invaders</a></li>
         <li><a href="./ttt.html">Tic Tac Toe</a></li>
         <li><a href="http://snap.berkeley.edu/snapsource/snap.html#present:Username=stevenholguin&ProjectName=Arcade">Arcade</a></li>
       </ul>
     </li>
     <li><a href="./giveaways.html">Giveaways</a></li>
-    <li><a href="./bsw.html">Steven's Store</a>
+    <li><a href="#">Other Projects</a>
       <ul>
-        <li class="dir"><a href="#">Electronics</a></li>
-        <li class="dir"><a href="#">Clothes</a>
-          <ul>
-            <li><a href="#">Shirts</a></li>
-            <li><a href="#">Pants</a></li>
-            <li><a href="#">Sneakers</a></li>
-            <li><a href="#">Hats</a></li>
-            <li><a href="#">Accesories</a></li>
-          </ul>
-        </li>
-        <li><a href="#">Toys and Games</a></li>
-        <li><a href="#">Home Improvement</a></li>
-        <li><a href="#">Gift Cards</a></li>
+        <li class="dir"><a href="./giveaways.html">Bedroom Lights Website</a></li>
+        <li class="dir"><a href="./prosite.html">Second Website</a></li>
+        <li><a href="./memory.html">Backend Example</a></li>
+        <li><a href="#">Blank</a></li>
+        <li><a href="#">Blank</a></li>
       </ul>
     </li>
     <li><a href="./contactme.html">News Letter</a></li>
@@ -47,7 +39,6 @@
   </ul>
 </nav>
 </div>
-<a href="./prosite.html"><p id="prosite">Steven's Second Website</p></a>
 <div id="copyright">
   <center><h3>©2016 Steven Productions</h3></center>
 </div>
