--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <li><a href="./giveaways.html">Giveaways</a></li>
     <li><a href="#">Other Projects</a>
       <ul>
-        <li class="dir"><a href="./giveaways.html">Bedroom Lights Website</a></li>
+        <li class="dir"><a href="./bsw.html">Bedroom Lights Website</a></li>
         <li class="dir"><a href="./prosite.html">Second Website</a></li>
         <li><a href="./memory.html">Backend Example</a></li>
         <li><a href="#">Blank</a></li>
