--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         backSpeed: 0,
         backDelay: 1000,
         loop: true,
-        showCursor: true,
+        showCursor: false,
         cursorChar: "|",
       });
   });
