--- a/giveaways.html
+++ b/giveaways.html
@@ -24,7 +24,7 @@
         backSpeed: 0,
         backDelay: 1000,
         loop: true,
-        showCursor: true,
+        showCursor: false,
         cursorChar: "|",
       });
   });
