--- a/giveaways.html
+++ b/giveaways.html
@@ -8,7 +8,7 @@
     <script src="typed.js"></script>
     <script type="text/javascript" src="giveaways.js"></script>
   </head>
-  <body style="background-color:grey;">
+  <body style="background-color:#bbeeff;">
   <center><h1 class="element"></h1></center>
   <center id="p5"><a href="https://docs.google.com/forms/d/1PGXNkw0mjdxBn3aZGMix_z7yaHt1-iXIqsR8jfEvtDY/viewform?c=0&w=1"><button id="p4" class="myButton">PS4 Giveaway</button></a></center>
   <center><img id="p4_pic" src="p4.png" height="250" width="250"></center>
