--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
  <script>
   $(function(){
       $(".element").typed({
-        strings: ["Hey There", "Welcome to my Website", "There is games", "a store", "and giveaways"],
+        strings: ["Dalia", "sucks", "Dick"],
         typeSpeed: 0,
         backSpeed: 0,
         backDelay: 1000,
