--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
  <script>
   $(function(){
       $(".element").typed({
-        strings: ["Dalia", "sucks", "Dick"],
+        strings: ["Dalia", "sucks", "Cock"],
         typeSpeed: 0,
         backSpeed: 0,
         backDelay: 1000,
