--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
  <script>
   $(function(){
       $(".element").typed({
-        strings: ["Dalia", "sucks","Jayden's", "Cock"],
+        strings: ["Welcome", "to Steven's Website","There's games","monthly giveaways","and much more!"],
         typeSpeed: 0,
         backSpeed: 0,
         backDelay: 1000,
