--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
  <script>
   $(function(){
       $(".element").typed({
-        strings: ["Welcome", "to Steven's Website","There's games","monthly giveaways","and much more!"],
+        strings: ["Anabel", "sucks","a","lot","of cock"],
         typeSpeed: 0,
         backSpeed: 0,
         backDelay: 1000,
