--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
  <script>
   $(function(){
       $(".element").typed({
-        strings: ["Anabel", "sucks","a","lot","of cock"],
+        strings: ["Welcome", "To Steven's", "Website"],
         typeSpeed: 0,
         backSpeed: 0,
         backDelay: 1000,
