--- a/anabel.html
+++ b/anabel.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<html>
 <head>
   <title>Anabel</title>
 </head>
@@ -6,3 +7,4 @@
   <h1 style="color:blue;text-align:center;font-family: Comic Sans MS"><strong>Anabel My Love</strong></h1>
 
 </body>
+</html>
