--- a/anabel.html
+++ b/anabel.html
@@ -6,11 +6,9 @@
 <body style="background-color:#fcf014">
   <h1 style="color:blue;text-align:center;font-family: Comic Sans MS"><strong>Anabel My Love</strong></h1>
  	<center>
-	<h1>I’m thinking of a number between 1 and 100…</h1>
-		<h3>Try to guess it!</h3>
 		<form>
-			Guess A Number<br>
-			<input type="number" name="guess" id="guess" size="15" placeholder="Your Guess"><br>
+			The very important code Ms. Rosario received:<br>
+			<input type="number" name="guess" id="guess" size="15" placeholder="8 Digit Code"><br>
 		</form><br>
 		<button id="submit">Submit</button>
 		</center>
