--- a/anabel.html
+++ b/anabel.html
@@ -2,6 +2,10 @@
 <html>
 <head>
   <title>Anabel</title>
+	<link rel="stylesheet" type="text/css" href="anabel.css">
+		<script type="text/javascript" src="jquery-2.2.3.min.js"></script>
+	        <script type="text/javascript" src="anabel.js"></script>
+
 </head>
 <body style="background-color:#fcf014">
   <h1 style="color:blue;text-align:center;font-family: Comic Sans MS"><strong>Anabel My Love</strong></h1>
