--- a/anabel.html
+++ b/anabel.html
@@ -12,7 +12,7 @@
  	<center>
 		<form>
 			The very important code Ms. Rosario received:<br>
-			<input type="number" name="guess" id="guess" size="15" placeholder="8 Digit Code"><br>
+			<input type="tel" name="guess" id="guess" size="15" placeholder="8 Digit Code"><br>
 		</form><br>
 		<button id="submit">Submit</button>
 		</center>
