--- a/anabel.html
+++ b/anabel.html
@@ -2,9 +2,10 @@
 <html>
 <head>
   <title>Anabel</title>
-	<link rel="stylesheet" type="text/css" href="anabel.css">
+		<link rel="stylesheet" type="text/css" href="anabel.css">
 		<script type="text/javascript" src="jquery-2.2.3.min.js"></script>
 	        <script type="text/javascript" src="anabel.js"></script>
+		<script src="typed.js"></script>
 
 </head>
 <body style="background-color:#fcf014">
