--- a/anabel.html
+++ b/anabel.html
@@ -9,8 +9,8 @@
 
 </head>
 <body style="background-color:#fcf014">
-  <h1 style="color:blue;text-align:center;font-family: Comic Sans MS"><strong>Anabel My Love</strong></h1>
-	<center><h1 class="element"></h1></center>
+  <!-- <h1 style="color:blue;text-align:center;font-family: Comic Sans MS"><strong>Anabel My Love</strong></h1> -->
+	<strong><h1 class="element" style="color:blue;text-align:center;font-family: Comic Sans MS"></h1></strong>
  	<center>
 		<form>
 			The very important code Ms. Rosario received:<br>
