--- a/anabel.html
+++ b/anabel.html
@@ -10,7 +10,7 @@
 </head>
 <body style="background-color:#fcf014">
   <!-- <h1 style="color:blue;text-align:center;font-family: Comic Sans MS"><strong>Anabel My Love</strong></h1> -->
-	<strong><h1 class="element" style="color:blue;text-align:center;font-family: sans-serif"></h1></strong>
+	<strong><h1 class="element" style="color:blue;text-align:center;font-family: Geneva"></h1></strong>
  	<center>
 		<form>
 			The very important code Ms. Rosario received:<br>
