--- a/anabel.html
+++ b/anabel.html
@@ -22,10 +22,10 @@
 	<script>
   $(function(){
       $(".element").typed({
-        strings: ["Anabel", "My Love", "My Princess", "My beautiful girl fren", "My darling"],
+        strings: ["Anabel", "My Love", "My Princess", "My beautiful girl fren", "My darling", "My baaaaaab", "My wifey"],
         typeSpeed: 0,
         backSpeed: 0,
-        backDelay: 1300,
+        backDelay: 1500,
         loop: true,
         showCursor: false,
         cursorChar: "|",
