--- a/anabel.html
+++ b/anabel.html
@@ -22,7 +22,7 @@
 	<script>
   $(function(){
       $(".element").typed({
-        strings: ["Anabel", "My Love", "My Princess", "My beautiful girl fren", "My darling", "My baaaaaab", "My wifey"],
+        strings: ["Anabel Rosario", "My Love", "My Princess", "My beautiful girl fren", "My darling", "My baaaaaab", "My wifey"],
         typeSpeed: 0,
         backSpeed: 0,
         backDelay: 1500,
