--- a/anabel19992309.html
+++ b/anabel19992309.html
@@ -4,7 +4,7 @@
 </head>
 <body style="background-color: white">
   <h1 style="color:blue;text-align:center;font-family: Comic Sans MS"><strong>Steven's Website!</strong></h1>
-  <img src="sample_dog.png">
+  <img src="sample_dog.jpg">
   <h3 style="color:red;font-family: sans-serif;">Press here to enter for a chance to win a brand new PS4</h3>
   <a href=#>
     <button style="background-color:lightgreen;text-align:center">Click here to enter</button>
