--- a/anabel19992309.html
+++ b/anabel19992309.html
@@ -1,12 +1,16 @@
 <!DOCTYPE html>
 <head>
   <title>Anabel - 19992309</title>
+  <link rel="stylesheet" type="text/css" href="anabel19992309.css">
 </head>
-<body style="background-color: white">
-  <h1 style="color:blue;text-align:center;font-family: Comic Sans MS"><strong>Steven's Website!</strong></h1>
-  <img src="sample_dog.jpg">
-  <h3 style="color:red;font-family: sans-serif;">Press here to enter for a chance to win a brand new PS4</h3>
-  <a href=#>
-    <button style="background-color:lightgreen;text-align:center">Click here to enter</button>
-  </a>
+<body>
+<div class="quote">
+		<p class="line-through"><span>Design Quote</span></p>
+		<div class="stripe-border">
+        <blockquote>
+          <p>&ldquo;Design is a plan for arranging elements in such a way as best to accomplish a particular purpose.&rdquo; </p>
+        </blockquote>
+		</div>
+		<cite class="line-through"><span>Charles Eames</span></cite>
+	</div>
 </body>
