--- a/anabel19992309.html
+++ b/anabel19992309.html
@@ -5,7 +5,7 @@
 </head>
 <body>
 <div class="quote">
-		<p class="line-through"><span>Design Quote</span></p>
+	<strong><p class="line-through"><span>YES</span></p></strong>
 		<div class="stripe-border">
         <blockquote>
           <p>&ldquo;Design is a plan for arranging elements in such a way as best to accomplish a particular purpose.&rdquo; </p>
