--- a/anabel19992309.html
+++ b/anabel19992309.html
@@ -8,7 +8,9 @@
 	<strong><h1 class="line-through"><span>YES</span></h1></strong>
 		<div class="stripe-border">
         <blockquote>
-          <p>&ldquo;Design is a plan for arranging elements in such a way as best to accomplish a particular purpose.&rdquo; </p>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus at urna hendrerit, faucibus nulla nec, faucibus velit. Fusce rutrum, odio at volutpat iaculis, enim tellus iaculis orci, in porta odio purus non tortor. Donec non arcu eu ante finibus venenatis. Aenean non purus at turpis finibus molestie. Etiam in est ac dui ornare volutpat eget et neque. Vestibulum luctus, massa sed feugiat pharetra, tellus risus pulvinar metus, sit amet congue nisl lorem hendrerit odio. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Phasellus sed bibendum diam.
+
+Proin pulvinar tristique mauris ut fermentum. Sed rutrum semper eros ut ultrices. Fusce facilisis pulvinar erat. Proin rhoncus ornare blandit. Proin lorem erat, tempor sed justo quis, gravida lobortis enim. Vestibulum aliquam purus a dui viverra dictum. Vivamus mattis massa in rutrum ullamcorper. </p>
         </blockquote>
 		</div>
 		<cite class="line-through"><span>Charles Eames</span></cite>
