--- a/anabel.html
+++ b/anabel.html
@@ -8,7 +8,7 @@
 		<script src="typed.js"></script>
 
 </head>
-<body style="background-color:#fcf014">
+<body style="background-color:#fffc4f">
   <!-- <h1 style="color:blue;text-align:center;font-family: Comic Sans MS"><strong>Anabel My Love</strong></h1> -->
 	<strong><h1 class="element" style="color:blue;text-align:center;font-family: Geneva"></h1></strong>
  	<center>
