--- a/anabel19992309.html
+++ b/anabel19992309.html
@@ -2,6 +2,8 @@
 <head>
   <title>Anabel - 19992309</title>
   <link rel="stylesheet" type="text/css" href="anabel19992309.css">
+  <script type="text/javascript" src="jquery-2.2.3.min.js"></script>
+	        <script type="text/javascript" src="anabel19992309.js"></script>
 </head>
 <body>
 <div class="quote">
@@ -15,4 +17,12 @@ Proin pulvinar tristique mauris ut fermentum. Sed rutrum semper eros ut ultrices
 		</div>
 		<cite class="line-through"><span>Charles Eames</span></cite>
 	</div>
+	.heart-wrapper.active
+  .heart
+    .tl
+    .tr
+    .bl
+    .br
+  .ring
+  .circles
 </body>
