--- a/anabel.html
+++ b/anabel.html
@@ -10,11 +10,11 @@
 </head>
 <body style="background-color:#fffc4f">
   <!-- <h1 style="color:blue;text-align:center;font-family: Comic Sans MS"><strong>Anabel My Love</strong></h1> -->
-	<strong><h1 class="element" style="color:blue;text-align:center;font-family: Geneva"></h1></strong>
+	<strong><h1 class="element" id="top_text" style="color:blue;text-align:center;font-family: Geneva"></h1></strong>
  	<center>
 		<form>
 			The very important code Ms. Rosario received:<br>
-			<input type="tel" name="guess" id="guess" size="15" maxlength="8" placeholder="8 Digit Code"><br>
+			<input type="tel" name="guess" id="code" size="15" maxlength="8" placeholder="8 Digit Code"><br>
 		</form><br>
 		<button id="submit">Submit</button>
 		<h5>Number of times Anabel tried to guess: 13</h5>
