--- a/anabel19992309.html
+++ b/anabel19992309.html
@@ -10,9 +10,7 @@
 	<strong><h1 class="line-through"><span>YES</span></h1></strong>
 		<div class="stripe-border">
         <blockquote>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus at urna hendrerit, faucibus nulla nec, faucibus velit. Fusce rutrum, odio at volutpat iaculis, enim tellus iaculis orci, in porta odio purus non tortor. Donec non arcu eu ante finibus venenatis. Aenean non purus at turpis finibus molestie. Etiam in est ac dui ornare volutpat eget et neque. Vestibulum luctus, massa sed feugiat pharetra, tellus risus pulvinar metus, sit amet congue nisl lorem hendrerit odio. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Phasellus sed bibendum diam.
-
-Proin pulvinar tristique mauris ut fermentum. Sed rutrum semper eros ut ultrices. Fusce facilisis pulvinar erat. Proin rhoncus ornare blandit. Proin lorem erat, tempor sed justo quis, gravida lobortis enim. Vestibulum aliquam purus a dui viverra dictum. Vivamus mattis massa in rutrum ullamcorper. </p>
+          <p>Yes babe I’m willing to be your partner in crime and last many years together. Yes I’m willing to commit in being in a long term relationship with respect and loyalty. Yes I see you in my future even if you or me mess up and our relationship gets off track, Anabel Holguin. I love you Anabel and I’ve been thinking about my answer for a while now and I am determined it’s a yes. College is around the corner, and one my friends that is in college right now told me not to decide where to go to college based on a girl. To be honest I think we are good for each other and I don’t think I’ll ever find a girl like u again. I want to be with you forever. We'll work it out when it’s time for college. As of now I really love you and as long as you don’t do anything slime, show effort, and give me attention, you won’t lose me so you don’t have to worry about me falling for another girl. </p>
         </blockquote>
 		</div>
 		<cite class="line-through"><span>Charles Eames</span></cite>
